--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@mantine/form": "^7.5.2",
     "@mantine/hooks": "^7.5.2",
     "@mantine/notifications": "^7.5.2",
+    "@prisma/client": "^5.10.2",
     "@tabler/icons-react": "^2.47.0",
     "next": "14.1.0",
+    "pg": "^8.11.3",
+    "prisma": "^5.10.2",
     "react": "^18",
     "react-dom": "^18"
   },
