--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/notifications": "^7.5.2",
     "@prisma/client": "^5.10.2",
     "@tabler/icons-react": "^2.47.0",
+    "bcrypt": "^5.1.1",
     "next": "14.1.0",
     "pg": "^8.11.3",
     "prisma": "^5.10.2",
@@ -22,6 +23,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
