--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
     "paths": {
       "@dashboard/*": [
         "dashboard/*"
+      ],
+      "@database/*": [
+        "../../prisma/database/*"
       ]
     }
   },
