--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pg": "^8.11.3",
     "prisma": "^5.10.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
