--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@mantine/core": "^7.5.2",
-    "@mantine/form": "^7.5.2",
     "@mantine/hooks": "^7.5.2",
-    "@mantine/notifications": "^7.5.2",
+    "@mantine/notifications": "^7.6.2",
     "@prisma/client": "^5.10.2",
     "@tabler/icons-react": "^2.47.0",
     "bcrypt": "^5.1.1",
@@ -21,7 +21,9 @@
     "prisma": "^5.10.2",
     "react": "^18",
     "react-dom": "^18",
-    "use-debounce": "^10.0.0"
+    "react-hook-form": "^7.51.1",
+    "use-debounce": "^10.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
