feat: add new loan

--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@mantine/core": "^7.5.2",
+    "@mantine/dates": "^7.7.0",
     "@mantine/hooks": "^7.5.2",
     "@mantine/notifications": "^7.6.2",
     "@prisma/client": "^5.10.2",
     "@tabler/icons-react": "^2.47.0",
     "bcrypt": "^5.1.1",
+    "date-fns-jalali": "^3.6.0-0",
+    "dayjs": "^1.11.10",
+    "decimal.js": "^10.4.3",
     "next": "14.1.0",
     "pg": "^8.11.3",
     "prisma": "^5.10.2",
