feat: hydrate global config with using the jotai

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns-jalali": "^3.6.0-0",
     "dayjs": "^1.11.10",
     "decimal.js": "^10.4.3",
+    "jotai": "^2.7.2",
     "next": "14.1.0",
     "pg": "^8.11.3",
     "prisma": "^5.10.2",
