--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://user:password@localhost:5432/da_name?schema=public"
+
+AUTH_SECRET="my-secret"
