--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-  "name": "next-financial",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "prisma generate && prisma db push && next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
-    "@mantine/core": "^7.5.2",
-    "@mantine/dates": "^7.7.0",
-    "@mantine/hooks": "^7.5.2",
-    "@mantine/notifications": "^7.6.2",
-    "@prisma/client": "^5.10.2",
-    "@tabler/icons-react": "^2.47.0",
-    "bcrypt": "^5.1.1",
-    "date-fns-jalali": "^3.6.0-0",
-    "dayjs": "^1.11.10",
-    "decimal.js": "^10.4.3",
-    "jotai": "^2.7.2",
-    "next": "14.1.0",
-    "pg": "^8.11.3",
-    "prisma": "^5.10.2",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.51.1",
-    "use-debounce": "^10.0.0",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.35",
-    "postcss-preset-mantine": "^1.13.0",
-    "postcss-simple-vars": "^7.0.1",
-    "typescript": "^5"
-  }
+    "name": "next-financial",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "prisma generate && prisma db push && next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@hookform/resolvers": "^3.3.4",
+        "@mantine/core": "^7.5.2",
+        "@mantine/dates": "^7.7.0",
+        "@mantine/hooks": "^7.5.2",
+        "@mantine/notifications": "^7.6.2",
+        "@prisma/client": "^5.10.2",
+        "@tabler/icons-react": "^2.47.0",
+        "bcryptjs": "^2.4.3",
+        "date-fns-jalali": "^3.6.0-0",
+        "dayjs": "^1.11.10",
+        "decimal.js": "^10.4.3",
+        "jose": "^5.2.4",
+        "jotai": "^2.7.2",
+        "next": "14.1.0",
+        "pg": "^8.11.3",
+        "prisma": "^5.10.2",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-hook-form": "^7.51.1",
+        "use-debounce": "^10.0.0",
+        "zod": "^3.22.4"
+    },
+    "devDependencies": {
+        "@types/bcryptjs": "^2.4.6",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.1.0",
+        "postcss": "^8.4.35",
+        "postcss-preset-mantine": "^1.13.0",
+        "postcss-simple-vars": "^7.0.1",
+        "typescript": "^5"
+    }
 }
