--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
         "@mantine/notifications": "^7.6.2",
         "@prisma/client": "^5.10.2",
         "@tabler/icons-react": "^2.47.0",
+        "@types/moment-jalaali": "^0.7.9",
         "bcryptjs": "^2.4.3",
         "date-fns-jalali": "^3.6.0-0",
         "dayjs": "^1.11.10",
         "decimal.js": "^10.4.3",
         "jose": "^5.2.4",
         "jotai": "^2.7.2",
+        "moment-jalaali": "^0.10.1",
         "next": "14.1.0",
         "pg": "^8.11.3",
         "prisma": "^5.10.2",
